--- a/ColorPicker/Components/WindowTitleBar.xaml
+++ b/ColorPicker/Components/WindowTitleBar.xaml
@@ -15,6 +15,7 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <Image
@@ -32,15 +33,37 @@
             Foreground="{DynamicResource PrimaryText}"
             Text="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Title}" />
 
+        <!--  Debug  -->
+        <Button
+            x:Name="DebugButton"
+            Grid.Column="2"
+            Width="46"
+            Height="32"
+            Click="DebugButton_Click"
+            RenderOptions.EdgeMode="Aliased"
+            Style="{StaticResource TitleBarButtonStyle}"
+            Visibility="Collapsed">
+            <fa:ImageAwesome
+                Width="12"
+                Height="12"
+                VerticalAlignment="Center"
+                Foreground="Red"
+                Icon="Bug" />
+        </Button>
+
         <Button
             x:Name="OnTopButton"
-            Grid.Column="2"
+            Grid.Column="3"
             Width="46"
             Height="32"
             Click="OnTopButton_Click"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}">
+            <Button.ToolTip>
+                Keep this window on top
+            </Button.ToolTip>
             <fa:ImageAwesome
+                x:Name="OnTopButtonIcon"
                 Width="12"
                 Height="12"
                 VerticalAlignment="Center"
@@ -49,7 +72,7 @@
         </Button>
 
         <Button
-            Grid.Column="3"
+            Grid.Column="4"
             Click="OnMinimizeButton_Click"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}">
@@ -63,7 +86,7 @@
         </Button>
 
         <Button
-            Grid.Column="4"
+            Grid.Column="5"
             Click="OnCloseButton_Click"
             Style="{StaticResource TitleBarCloseButtonStyle}">
             <Path
