--- a/ColorPicker/Components/ColorPicker.xaml
+++ b/ColorPicker/Components/ColorPicker.xaml
@@ -41,11 +41,12 @@
                 <!--  %  -->
                 <TextBlock
                     x:Name="ZoomLevelText"
-                    Margin="6,7,0,0"
+                    Margin="6,6,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     FontSize="15"
                     Foreground="Black"
+                    IsHitTestVisible="False"
                     Text="{Binding ZoomPercent, StringFormat={}{0}%}" />
 
                 <!--  Zoom level  -->
@@ -62,7 +63,13 @@
                     Minimum="11"
                     Style="{StaticResource ZoomSliderStyle}"
                     TickFrequency="2"
-                    Value="{Binding ZoomLevel, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=UserControl}}" />
+                    Value="{Binding ZoomLevel, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                    <Slider.ToolTip>
+                        <TextBlock>
+                            Zoom<LineBreak />
+                            ● Drag to zoom</TextBlock>
+                    </Slider.ToolTip>
+                </Slider>
 
                 <!--  Crosshair  -->
                 <Grid IsHitTestVisible="False">
@@ -135,31 +142,41 @@
                             Icon="Sliders" />
 
                         <Border.ContextMenu>
-                            <ContextMenu x:Name="ColorTypeMenu">
+                            <ContextMenu x:Name="ColorTypeMenu" Style="{StaticResource ModernContextMenuStyle}">
                                 <MenuItem
                                     Click="DropdownMenuItem_Click"
                                     Cursor="Hand"
                                     Header="HEX"
+                                    IsChecked="{Binding CurrentColorType, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=HEX}"
+                                    Style="{StaticResource ModernMenuItemStyle}"
                                     Tag="{x:Static models:ColorTypes.HEX}" />
                                 <MenuItem
                                     Click="DropdownMenuItem_Click"
                                     Cursor="Hand"
                                     Header="RGB"
+                                    IsChecked="{Binding CurrentColorType, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=RGB}"
+                                    Style="{StaticResource ModernMenuItemStyle}"
                                     Tag="{x:Static models:ColorTypes.RGB}" />
                                 <MenuItem
                                     Click="DropdownMenuItem_Click"
                                     Cursor="Hand"
                                     Header="HSV"
+                                    IsChecked="{Binding CurrentColorType, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=HSV}"
+                                    Style="{StaticResource ModernMenuItemStyle}"
                                     Tag="{x:Static models:ColorTypes.HSV}" />
                                 <MenuItem
                                     Click="DropdownMenuItem_Click"
                                     Cursor="Hand"
                                     Header="HSL"
+                                    IsChecked="{Binding CurrentColorType, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=HSL}"
+                                    Style="{StaticResource ModernMenuItemStyle}"
                                     Tag="{x:Static models:ColorTypes.HSL}" />
                                 <MenuItem
                                     Click="DropdownMenuItem_Click"
                                     Cursor="Hand"
                                     Header="CMYK"
+                                    IsChecked="{Binding CurrentColorType, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=CMYK}"
+                                    Style="{StaticResource ModernMenuItemStyle}"
                                     Tag="{x:Static models:ColorTypes.CMYK}" />
                             </ContextMenu>
                         </Border.ContextMenu>
@@ -236,7 +253,7 @@
                     </Viewbox>
                 </Grid>
 
-                <!--  Bottom Info  -->
+                <!--  Pause/Resume  -->
                 <Grid
                     Grid.Row="3"
                     Height="32"
