--- a/ColorPicker/Components/WindowTitleBar.xaml
+++ b/ColorPicker/Components/WindowTitleBar.xaml
@@ -20,8 +20,8 @@
 
         <Image
             Grid.Column="0"
-            Width="{StaticResource IconSizeTitleBar}"
-            Height="{StaticResource IconSizeTitleBar}"
+            Width="18"
+            Height="18"
             Margin="5,0,1,0"
             Source="/Assets/Icon_32.ico" />
 
@@ -29,7 +29,7 @@
             Grid.Column="1"
             Margin="4,0,0,0"
             VerticalAlignment="Center"
-            FontSize="{StaticResource FontSizeTitleBar}"
+            FontSize="13"
             Foreground="{DynamicResource PrimaryText}"
             Text="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Title}" />
 
