--- a/ColorPicker/Components/WindowTitleBar.xaml
+++ b/ColorPicker/Components/WindowTitleBar.xaml
@@ -39,6 +39,7 @@
             Grid.Column="2"
             Width="46"
             Height="32"
+            HorizontalAlignment="Left"
             Click="DebugButton_Click"
             RenderOptions.EdgeMode="Aliased"
             Style="{StaticResource TitleBarButtonStyle}"
